# OpenCV2OpenGL

./: README.md
Data1/: CaliBox.txt  CaliBoxC.txt  CaliBoxR.txt  CaliBoxRC.txt  CaliBoxTrans.txt  CaliHorse.txt  box.ply  horse1.ply
Data1/R1/: logfile.txt
Data1/R2/: camera.ply  logfile.txt
Data1/R3/: camera.ply  logfile.txt
Data1/R4/: camera.ply  logfile.txt
Data1/R5/: camera-rel-model.ply  camera.ply  logfile.txt
Data1/R6/: camera-rel-model.ply  camera.ply  logfile.txt
Data2/: CaliHorse.txt  CaliHorse1.txt  CaliHorse2.txt
Data2/HorseFolder/: logfile.txt
Example1/: .cproject  .project
Example1/includes/glad/: glad.h
Example1/src/: CMakeLists.txt  OpenCV2OpenGL1.cpp  OpenCV2OpenGL1.hpp  ReadPly.cpp  ReadPly.hpp  glad.c  helpers.cpp  helpers.hpp  includes.hpp  materials.fs  materials.vs  mesh_ply.cpp  mesh_ply.hpp  shader.cpp  shader.h  shader.hpp
